--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,15 +31,15 @@ jobs:
         if: success()
         run: |
           docker build -t ingrid265/web-app .
-          echo ${{ secrets.DOCKER_HUB_USERNAME }} | docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} --password-stdin
+          echo ${{ secrets.DOCKER_HUB_PASSWORD }} | docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} --password-stdin
           docker push ingrid265/web-app:latest
 
-      - name: Deploy to server
-        if: success()
-        run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
-          docker pull ingrid265/web-app:latest
-          docker stop web-app || true
-          docker rm web-app || true
-          docker run -d --name web-app -p 80:80 ingrid265/web-app:latest
-          EOF
+      # - name: Deploy to server
+      #   if: success()
+      #   run: |
+      #     ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
+      #     docker pull ingrid265/web-app:latest
+      #     docker stop web-app || true
+      #     docker rm web-app || true
+      #     docker run -d --name web-app -p 80:80 ingrid265/web-app:latest
+      #     EOF
